start on config generation.

--- a/config.ini
+++ b/config.ini
@@ -26,6 +26,7 @@ dnsmasq_interface=wlan0
 dnsmasq_blackhole_dns=false
 dnsmasq_start_address=192.168.1.10
 dnsmasq_end_address=192.168.1.160
+dnsmasq_subnet_mask=255.255.255.0
 dnsmasq_lease_time=1000
 
 ; hostap configuration
