add some basic settings to config.ini - learned I can't be a lazy idiot like I thouight I could long ago if ConfigEngine is to validate my settings.
whoops.

--- a/config.ini
+++ b/config.ini
@@ -9,16 +9,19 @@
 
 [general]
 ; administration passphrase
+tld=lan
+hostname=piratebox
 admin_key=fruitcake
 expert_mode=false
 
 [network]
+; these options aren't currently implemented.
+; TODO: implement these. 
 ; DNS configuration
-dns=4.2.2.2
-
+; dns=4.2.2.2
 ; enable the bridge.
-bridge_enable=false
-bridge_interfaces=wlan0 eth0
+; bridge_enable=false
+; bridge_interfaces=wlan0 eth0
 
 ; dnsmasq configuration
 dnsmasq_enable=true
@@ -44,6 +47,9 @@ type=wired
 interface_type=wired
 enabled=false
 dhcp=true
+ip=
+subnet_mask=
+gateway=
 
 
 [interface.wlan0]
