implement interfaces configuration for wireless clients (WPA and open networks)

--- a/default.ini
+++ b/default.ini
@@ -56,8 +56,13 @@ gateway=
 ui_label=Wireless network
 type=wireless
 enabled=true
+; there are two modes for wireless adapters: Client and AP. In client mode, the network is
+; connected to via the /etc/network/interfacces mechanism. Otherwise, hostapd is used.
 mode=ap
-security=wpa2:chunkybacon
+; can be none or wpa
+security=wpa
+psk=allonewordlowercase
+ssid=cheesecake
 dhcp=false
 ip=192.168.1.1
 subnet_mask=255.255.255.0
