Make eth0 on by default. actually write things in the right place.

--- a/default.ini
+++ b/default.ini
@@ -45,7 +45,7 @@ hostapd_psk=raspberry
 ui_label=Wired network
 type=wired
 interface_type=wired
-enabled=false
+enabled=true
 dhcp=true
 ip=
 subnet_mask=
