install: produces something that boots, mostly?
sphinx: fix path

service:libsrv: proper path to pidfile

ini: changeover to include nyancat service

--- a/alexandria.ini
+++ b/alexandria.ini
@@ -82,6 +82,6 @@ wpa=false
 psk=readabook
 no_broadcast=false
 
-[service.beacon]
-ui_label=BTLE beacon
-enabled=false
+[service.nyancat]
+ui_label=Nyancat daemon
+enabled=true
