--- a/nginx.conf
+++ b/nginx.conf
@@ -14,6 +14,7 @@ http {
 	server {
 		access_log off;
 		listen *:80;
+        client_body_max_size 0;
 		location /static/ {
 			root bin/LibServer;
 		}
