nginx: ACTUALLY fix uploading large files, then add sendfile support.

--- a/nginx.conf
+++ b/nginx.conf
@@ -14,7 +14,9 @@ http {
 	server {
 		access_log off;
 		listen *:80;
-        client_body_max_size 0;
+        client_max_body_size 0;
+        sendfile on;
+        tcp_nopush on;
 		location /static/ {
 			root bin/LibServer;
 		}
