Fix ios and make sure the sudoers extension works.
Apple: Fake out ios/osx captive portal check

install: fix typo (sudoers.d not sudoers)

--- a/nginx.conf
+++ b/nginx.conf
@@ -24,4 +24,12 @@ http {
 			proxy_pass http://localhost:5555;
 		}
 	}
+	server {
+		listen *:80;
+		server_name apple.com *.apple.com;
+		location / {
+			try_files $uri =500;
+			root apple/;
+		}
+	}
 }
