Apple's Captive Network Detection Sucks.
So this is a really bad way of handling this. It's the best way I can think of though.

We consume a wildcard DNS that attempts to siphon all the content into the librarybox httpd. If it sees the UA CaptiveNetworkSupport, it will turn around and shovel it off to a special blackhole of 200 OK.

--- a/nginx.conf
+++ b/nginx.conf
@@ -14,22 +14,31 @@ http {
 	server {
 		access_log off;
 		listen *:80;
-        client_max_body_size 0;
-        sendfile on;
-        tcp_nopush on;
+		client_max_body_size 0;
+		sendfile on;
+		tcp_nopush on;
+
 		location /static/ {
 			root bin/LibServer;
 		}
+
 		location / {
 			proxy_pass http://localhost:5555;
+			if ($http_user_agent ~ CaptiveNetworkSupport ){
+				proxy_pass http://apple-captive:80;
+			}
+
+		}
+
+		location /library/test {
+			root apple/;
+			try_files /success.html;
 		}
 	}
 	server {
-		listen *:80;
-		server_name apple.com *.apple.com;
-		location / {
-			try_files $uri =500;
-			root apple/;
-		}
+		access_log off;
+		listen apple-captive:80;
+		root apple/;
+		try_files /success.html;
 	}
 }
