nginx: Benefit of the doubt -- maybe the world exists. It probably doesn't.
Doesn't matter, we'll hand them success anyways.

--- a/nginx.conf
+++ b/nginx.conf
@@ -32,7 +32,7 @@ http {
 
 		location /library/test {
 			root apple/;
-			try_files /success.html;
+			try_files $uri /success.html;
 		}
 	}
 	server {
