nginx: server_name not listen, dur.

--- a/nginx.conf
+++ b/nginx.conf
@@ -37,7 +37,8 @@ http {
 	}
 	server {
 		access_log off;
-		listen apple-captive:80;
+		server_name apple-captive;
+		listen *:80;
 		root apple/;
 		try_files /success.html;
 	}
