nginx: HTTP/1.1 200 NOT FOUND
Summarizes my feelings on this subject.

--- a/nginx.conf
+++ b/nginx.conf
@@ -29,17 +29,12 @@ http {
 			}
 
 		}
-
-		location /library/test {
-			root apple/;
-			try_files $uri /success.html;
-		}
 	}
 	server {
 		access_log off;
 		server_name apple-captive;
 		listen *:80;
 		root apple/;
-		try_files /success.html;
+		try_files /success.html /success.html;
 	}
 }
